--- a/app/frontend/src/assets/scss/style.scss
+++ b/app/frontend/src/assets/scss/style.scss
@@ -1,12 +1,22 @@
 @import '_colors';
 
-.navbar-spacing {
-    height: 2em;
+body {
+    background-color: darken(#FFF, 2%);
 }
 
-.bg-light {
+.navbar-spacing {
+    height: 3em;
+}
+
+h1 {
+    margin-left: 1em;
+    opacity: 0.7;
+}
+
+.navbar-tiktech {
     background-color: #FFF;
-    border-bottom: 1px solid rgba(#000, 0.7);
+    box-shadow: 0 15px 35px rgba(50,50,93,.1),0 5px 15px rgba(0,0,0,.07);
+    border: none;
 }
 
 .form-control {
@@ -31,4 +41,67 @@
 .btn-primary:not(:disabled):not(.disabled):active {
     background-color: darken($default-red, 7%);
     border-color: darken($default-red, 7%);
+}
+
+.list-ticket {
+    padding: 18px 24px;
+    background: #FFF;
+    display: block;
+    box-shadow: 0 2px 4px 0 rgba(50,50,93,.1);
+    margin-bottom: 1em;
+    color: rgba(#000, 0.8);
+    transition: transform 0.1s ease-in-out;
+}
+
+.material-card {
+    background: #FFF;
+    padding: 18px 24px;
+    box-shadow: 0 2px 4px 0 rgba(50,50,93,.1);
+}
+
+a.list-ticket {
+    text-decoration: none;
+}
+
+a.list-ticket:hover, a.list-ticket:focus {
+    transform: translate(1em);
+    color: rgba(#000, 0.8);
+}
+
+.reply-area {
+    position: fixed;
+    bottom: 1em;
+    display: flex;
+}
+
+.message {
+    margin-top: 1em;
+}
+
+.message {
+    h4 {
+        color: $default-red;
+        font-size: 1rem;
+        font-weight: bold;
+    }
+}
+
+.reply-area {
+    textarea {
+        box-shadow: 0 2px 4px 0 rgba(50,50,93,.1);
+        border: 0;
+        flex-grow: 4;
+        resize: horizontal;
+        height: 4em;
+        padding: 0.5em;
+    }
+
+    .reply-button {
+        margin-left: 2rem;
+        height: 4rem;
+        width: 4rem;
+        text-align: center;
+        line-height: 4rem;
+        font-size: 1.5em;
+    }
 }
